--- a/english_school/style.css
+++ b/english_school/style.css
@@ -19,6 +19,13 @@
     font-style: normal;
    }
 
+@font-face {
+    font-family: "Helios-Cond";
+    src: url("../fonts/Helios-Cond.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+   }
+
 *{
     margin: 0;
     padding: 0;
@@ -216,11 +223,17 @@ button{
 .test h3{
     color: #ffffff;
     font-size: 50px;
+    font-family:"adineuePROKZ";
+    line-height: 60px;
+    letter-spacing: 3px;
 }
 
 .test p{
     color: #ffffff;
     font-size: 50px;
+    font-family: "adineuePRO-kur-light";
+    line-height: 60px;
+    letter-spacing: 3px;
 }
 
 .test button{
@@ -229,7 +242,8 @@ button{
     background-color: #ffffff;
     color: #636363;
     margin-top: 35px;
-    margin-bottom: 50px;
+    margin-bottom: 45px;
+    box-shadow: 3px 3px 8px 2px rgba(197, 132, 35, 61);
 }
 
 .video iframe{
@@ -239,6 +253,8 @@ button{
 .teacher-item{
     width: 100%;
     max-width: 379px;
+    text-align: center;
+    margin-bottom: 40px;
 }
 
 .fwrap{
@@ -248,4 +264,42 @@ button{
 .button-more{
     width: 265px;
     height: 58px;
+    box-shadow: 1px 3px 11px -3px rgba(197, 132, 35, 39);
+}
+
+.teachers h3{
+    font-family: "Helios-Cond";
+    font-size: 50px;
+    color: #6e6e6e;
+    line-height: 65px;
+    letter-spacing: 4px;
+}
+
+.teachers > div > div:nth-child(1),
+.teachers > div > div:nth-child(2),
+.teachers > div > div:nth-child(4),
+.teachers > div > div:nth-child(5),
+.why-we.bg-orange > div > div:nth-child(1),
+.why-we.bg-orange > div > div:nth-child(2),
+.why-we.bg-orange > div > div:nth-child(4),
+.why-we.bg-orange > div > div:nth-child(5){
+   margin-right: 30px;
+}
+
+.teacher-name{
+    font-family: "adineuePROKZ";
+    font-size: 20px;
+    line-height: 30px;
+    color: #6e6e6e;
+    margin-bottom: 15px;
+    margin-top: 15px;
+    letter-spacing: 1px;
+}
+
+.teachers > div > p{
+    font-family: "adineuePRO-kur-light";
+    font-size: 18px;
+    color: #8c8c8c;
+    letter-spacing: 2px;
+    margin-bottom: 60px;
 }
