--- a/english_school/style.css
+++ b/english_school/style.css
@@ -335,7 +335,6 @@ h3{
     margin-bottom: 93px;
     font-family: "Helios-Cond";
     font-size: 50px;
-    line-height: 65px;
     letter-spacing: 4px;
     text-transform: uppercase;
     width: 100%;
@@ -371,10 +370,6 @@ h3{
     margin-bottom: 90px;
 }
 
-.advantages{
-    height: 650px;
-}
-
 .advantages h3{
     color: #ffffff;
     margin-bottom: 100px;
@@ -382,6 +377,7 @@ h3{
 
 .advantages-item{
     width: 187px;
+    margin-bottom: 75px;
 }
 
 .advantages-item span{
@@ -401,6 +397,76 @@ h3{
     background-color: #ffffff;
     margin-top: 24px;
     margin-bottom: 20px;
+}
+
+.feedback-item{
+    width: 100%;
+    max-width: 850px;
+    border: 1px solid #b8b8b8;
+    border-radius: 4px;
+    height: auto;
+    min-height: 297px;
+    margin: 0 auto;
+    padding: 35px 60px 0 29px;
+    display: flex;
+}
+
+.feedback h3{
+    margin-top: 80px;
+    margin-bottom: 70px;
+    color: #6e6e6e;
+}
+
+.feedback-item img{
+    border-radius: 50%;
+    margin-right: 35px;
+}
+
+.feedback-name{
+    font-family: "Helios-Cond";
+    font-size: 25px;
+    line-height: 35px;
+    text-transform: uppercase;
+    color: #6e6e6e;
+    letter-spacing: 1px;
+    margin-bottom: 27px;
+}
+
+.text-feedback{
+    font-family: "adineuePRO-kur-light";
+    color: #6e6e6e;
+    font-size: 18px;
+    line-height: 25px;
+    letter-spacing: 1px;
+}
+
+.form{
+    background-image: url(img/figure.png)
+}
+
+.form h4{
+    font-family: "Helios-Cond";
+    color: #ffffff;
+    text-transform: uppercase;
+    font-size: 50px;
+    letter-spacing: 1px;
+}
+
+.form input{
+    width: 100%; 
+    max-width: 340px;
+    height: 48px;
+    border-radius: 40px;
+    border: 0;
+    margin-bottom: 10px;
+}
+
+.name-input::placeholder{
+    font-family: "adineuePRO-kur-light";
+    font-size: 20px;
+    letter-spacing: 1px;
+    vertical-align: middle;
+    padding-left: 30px;
 }
 
 footer{
