--- a/english_school/style.css
+++ b/english_school/style.css
@@ -170,6 +170,29 @@ button{
     box-shadow: 4px 1px 131px 0px rgba(0, 0, 0, .53);
 }
 
+.timer h4{
+    font-family: "adineuePROKZ";
+    font-size: 45px;
+    color: #f6932e;
+    line-height: 60px;
+}
+
+.timer h4 span{
+    color: #edc22e;
+    font-size: 45px;
+}
+
+.time{
+    width: 140px;
+    height: 168px;
+    border-radius: 8px;
+    font-family: "adineuePROKZ";
+    font-size: 80px;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .levels{
     border-top: 5px solid #e9bf2d;
@@ -312,6 +335,7 @@ button{
     max-width: 379px;
     text-align: center;
     margin-bottom: 40px;
+    box-shadow: 7px 7px 29px 0px rgba(0, 0, 0, .18);
 }
 
 .fwrap{
@@ -399,6 +423,10 @@ h3{
     margin-bottom: 20px;
 }
 
+.feedback{
+    margin-bottom: 90px;
+}
+
 .feedback-item{
     width: 100%;
     max-width: 850px;
@@ -438,6 +466,12 @@ h3{
     font-size: 18px;
     line-height: 25px;
     letter-spacing: 1px;
+}
+
+.choise-item{
+    width: 100%;
+    max-width: 260px;
+    box-shadow: 7px 7px 29px 0px rgba(0, 0, 0, .18);
 }
 
 .form{
