--- a/english_school/style.css
+++ b/english_school/style.css
@@ -250,6 +250,9 @@ button{
 .why img{
     margin-bottom: 30px;
     border-radius: 5px 5px 0 0;
+    width: 100%;
+    height: auto;
+    max-width: 379px;
 }
 
 .text{
@@ -317,7 +320,8 @@ button{
 }
 
 .test button{
-    width: 410px;
+    width: 100%;
+    max-width: 410px;
     height: 84px;
     background-color: #ffffff;
     color: #636363;
@@ -328,6 +332,8 @@ button{
 
 .video iframe{
     border-radius: 11px;
+    width: 100%;
+    max-width: 378px;
 }
 
 .teacher-item{
@@ -335,7 +341,6 @@ button{
     max-width: 379px;
     text-align: center;
     margin-bottom: 40px;
-    box-shadow: 7px 7px 29px 0px rgba(0, 0, 0, .18);
 }
 
 .fwrap{
@@ -384,6 +389,10 @@ h3{
     margin-bottom: 60px;
 }
 
+.why{
+    box-shadow: 7px 7px 29px 0px rgba(0, 0, 0, .18);
+}
+
 .why-we,
 .advantages{
     padding-top: 85px;
@@ -421,6 +430,58 @@ h3{
     background-color: #ffffff;
     margin-top: 24px;
     margin-bottom: 20px;
+}
+
+svg{
+    width: 50%;
+    height: 170px;
+}
+
+.str0 {
+    stroke:#E8E8E8;
+    stroke-width:150;
+    stroke-miterlimit:22.9256
+}
+
+.fil0 {
+    fill:none
+}
+
+.fil1 {
+    fill:#E9E9E9;
+    fill-rule:nonzero
+}
+
+svg:hover .str0{
+    stroke: #edc22e;
+}
+
+svg:hover .fil1{
+    fill: #edc22e;
+}
+
+.process-item{
+    width: 100%;
+    max-width: 379px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.process-item p{
+    width: 50%;
+    font-family: "adineuePRO-kur-light";
+    font-size: 15px;
+    line-height: 22px;
+    letter-spacing: 1px;
+    color: #888888;
+    text-transform: uppercase;
+}
+
+.process h3{
+    margin-top: 70px;
+    margin-bottom: 80px;
+    color: #6e6e6e;
 }
 
 .feedback{
@@ -536,3 +597,24 @@ footer{
     letter-spacing: 2px;
     line-height: 41px;
 }
+
+
+
+@media screen and (max-width: 1025px) {
+    .card-header p{
+        font-size: 25px;
+    }
+    .text{
+        font-size: 17px;
+    }
+}
+
+@media screen and (max-width: 940px) {
+    .wrapper-content{
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+}
+
+
+
