--- a/english_school/style.css
+++ b/english_school/style.css
@@ -58,10 +58,11 @@ header{
 }
 
 .contacts{
-    margin-left: 160px;
-    margin-right: 110px;
-    text-align: center;
-    padding: 18px 0 18px 0;
+    margin-left: 120px;
+    margin-right: 9%;
+    text-align: right;
+    padding: 18px 0;
+    width: 350px;
 }
 
 .contacts span{
@@ -69,7 +70,7 @@ header{
     font-size: 35px;
     color: #565656;
     font-weight: bold;
-    line-height: 40px;
+    line-height: 55px;
 }
 
 .socials{
@@ -83,7 +84,7 @@ header{
 .adress{
     background-color: #edc22e;
     width: 434px;
-    text-align: center;
+    padding-left: 90px;
     vertical-align: middle;
     font-family:"adineuePROKZ";
     font-size: 30px;
@@ -538,7 +539,7 @@ svg:hover .fil1{
     border: 1px solid #b8b8b8;
     border-radius: 4px;
     height: auto;
-    max-height: 297px;
+    min-height: 297px;
     margin: 0 auto;
     padding: 35px 60px 0 29px;
     display: flex;
@@ -553,6 +554,7 @@ svg:hover .fil1{
 .feedback-item img{
     border-radius: 50%;
     margin-right: 35px;
+    width: 161px !important;
 }
 
 .feedback-name{
@@ -590,6 +592,7 @@ svg:hover .fil1{
     height: auto;
     min-height: 337px;
     padding: 40px 100px 0 70px;
+    margin-bottom: 82px;
 }
 
 .form h4{
@@ -598,24 +601,40 @@ svg:hover .fil1{
     text-transform: uppercase;
     font-size: 50px;
     letter-spacing: 1px;
+    width: 174%;
 }
 
-.form input{
+.form input,
+select{
     width: 100%; 
     max-width: 340px;
     height: 48px;
     border-radius: 40px;
     border: 0;
     margin-bottom: 10px;
-}
-
-.form input,
-.name-input::placeholder{
     font-family: "adineuePRO-kur-light";
     font-size: 20px;
     letter-spacing: 1px;
     vertical-align: middle;
     padding-left: 30px;
+}
+
+.button-form{
+    width: 100%;
+    max-width: 340px;
+    background-color: #f6932e;
+    text-transform: uppercase;
+    height: 47px;
+    box-shadow: 0px 9px 1px -2px rgba(149, 94, 16, 1);
+    margin-top: 10px;
+    margin-bottom: 58px;
+}
+
+.name-input::placeholder{
+    font-family: "adineuePRO-kur-light";
+    font-size: 20px;
+    letter-spacing: 1px;
+    vertical-align: middle;
 }
 
 footer{
@@ -642,6 +661,7 @@ footer{
     text-transform: uppercase;
     font-size: 41px;
     letter-spacing: 1px;
+    padding-left: 20px;
 }
 
 .contact-footer p{
@@ -650,12 +670,53 @@ footer{
     color: #ffffff;
     letter-spacing: 2px;
     line-height: 41px;
+    padding-left: 20px;
+}
+
+.logo-footer{
+    margin-bottom: 60px;
+}
+
+.popup-adress{
+    position: fixed;
+    display: block;
+    text-align: center;
+    top: 22%;
+    left: 25%;
+    width: 100%;
+    max-width: 640px;
+    height: auto;
+    min-height: 484px;
+    background-color: #ffffff;
+    border-radius: 20px;
+    display: none;
+    z-index: 10;
+}
+
+.overlay_popup {
+    display:none;
+    position:fixed;
+    z-index: 9;
+    top:0;
+    right:0; 
+    left:0;
+    bottom:0;
+    background:#000; 
+    opacity:0.5;
+  }
+
+.popup-header{
+    display: flex;
+    border-radius: 20px; 
 }
 
 @media screen and (max-width: 1300px){
     .next-slide,
     .prev-slide{
         display:none;
+    }
+    header{
+        height: auto;
     }
 }
 
@@ -666,12 +727,44 @@ footer{
     .text{
         font-size: 17px;
     }
+    .adress{
+    padding-left: 0px;
+    }
+    .contacts{
+        margin-left: 0px;
+        margin-right: 0px;
+    }
 }
 
 @media screen and (max-width: 940px) {
     .wrapper-content{
         flex-wrap: wrap;
         justify-content: space-around;
+    }
+    footer{
+        display: block;
+        height: auto;
+    }
+    .map,
+    .contacts-footer{
+        width: 100%;
+        text-align: center;
+    }
+    .main-navigation{
+       display: block;
+       text-align: center; 
+    }
+}
+
+@media screen and (max-width: 450px) {
+    h3{
+        margin-top: 40px;
+        margin-bottom: 40px;
+        font-size: 35px;
+    }
+
+    .card-next{
+        height: 550px;
     }
 }
 
